fix(authorization): increase backdrop z-index (#10831)

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -685,7 +685,7 @@
   padding: 15px 0;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 9999;
 
   background: $scheme-container-background-color;
   box-shadow: 0 1px 2px 0 rgba($scheme-container-box-shadow-color, 0.15);
